[package]
name = "advent_of_code"
version = "0.8.0"
authors = ["Mario Longobardi <mlongob@gmail.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pico-args = "0.5.0"
itertools = "0.10.5"
anyhow = "1.0.66"
nom = "7.1.1"
take-until = "0.1.0"
petgraph = "0.6.2"
regex = "1.7.0"
lazy_static = "1.4.0"
z3 = {version="0.11.2", features = ["static-link-z3"]}
memoize = "0.3.3"
im = "15.1.0"

